Fixed style not showing

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -2013,3 +2013,15 @@ body {
     width: calc(50% - 30px);
   }
 }
+
+/* Page ellipsis */
+.page-ellipsis {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 40px;
+  height: 40px;
+  color: var(--text-light);
+  font-weight: bold;
+  font-size: 1.2rem;
+}
